--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "intervention/image": "^2.3",
         "iscms/alisms-for-laravel": "^0.0.3",
         "laravel/tinker": "~1.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
         "mews/captcha": "^2.1",
 		"ollieread/multiauth": "dev-master"
     },
