--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravel/tinker": "~1.0",
         "predis/predis": "^1.1",
         "mews/captcha": "^2.1",
-		"ollieread/multiauth": "dev-master"
+		"ollieread/multiauth": "dev-master",
+        "predis/predis": "~1.1@dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
