--- a/composer.json
+++ b/composer.json
@@ -6,15 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "barryvdh/laravel-debugbar": "^2.4",
-        "barryvdh/laravel-ide-helper": "v2.3.2",
-        "gregwar/captcha": "1.*",
-        "intervention/image": "^2.3",
         "iscms/alisms-for-laravel": "^0.0.3",
+        "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "predis/predis": "^1.1",
-        "mews/captcha": "^2.1",
-		"ollieread/multiauth": "dev-master"
+        "mews/captcha": "^2.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
