--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,11 @@
         "itbdw/laravel-storage-qiniu": "^1.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-
-        "gregwar/captcha": "1.*",
         "mews/captcha": "^2.1",
-        "zgldh/qiniu-laravel-storage": "^0.6.8",
-
         "predis/predis": "~1.1@dev",
-        "stevenyangecho/laravel-u-editor": "~1.1"
+        "simplesoftwareio/simple-qrcode": "1.3.*",
+        "stevenyangecho/laravel-u-editor": "~1.1",
+        "zgldh/qiniu-laravel-storage": "^0.6.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
