--- a/composer.json
+++ b/composer.json
@@ -14,15 +14,13 @@
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "mews/captcha": "^2.1",
-
+        "overtrue/laravel-filesystem-qiniu": "^0.0.3",
         "overtrue/laravel-ueditor": "~1.0",
         "predis/predis": "~1.1@dev",
         "simplesoftwareio/simple-qrcode": "1.3.*",
-        "zgldh/qiniu-laravel-storage": "^0.6.8",
         "stevenyangecho/laravel-u-editor": "~1.1",
         "yuanchao/laravel-5-markdown-editor": "dev-master",
-        "zgldh/qiniu-laravel-storage": "^0.6.8",
-        "douyasi/laravel-wang-editor": "dev-master"
+        "zgldh/qiniu-laravel-storage": "^0.6.8"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
